# animeface-2009

./: .gitignore  README.md  build.sh  clean.sh  cmake_build.sh  cmake_clean.sh
animeface-ruby/: CMakeLists.txt  animeface.c
nvxs/: CMakeLists.txt
nvxs/animeface/: animeface.cpp
nvxs/nv_core/: nv_config.h  nv_core.h  nv_core_matrix.c  nv_core_matrix.cpp  nv_core_matrix.h  nv_core_util.c  nv_core_util.cpp  nv_core_util.h  nv_portable.h
nvxs/nv_face/: nv_face_analyze.cpp  nv_face_analyze.h  nv_face_detect.c  nv_face_detect.cpp  nv_face_detect.h  nv_face_detect_internal.h  nv_face_feature.h  nv_face_haarlike.c  nv_face_haarlike.cpp  nv_face_mlp_static.h
nvxs/nv_ip/: nv_euclidean_color.c  nv_euclidean_color.cpp  nv_gaussian5x5.cpp  nv_integral.cpp  nv_ip.h  nv_ip_euclidean_color.h  nv_laplacian.c  nv_laplacian.cpp
nvxs/nv_ml/: nv_gaussian.c  nv_gaussian.cpp  nv_kmeans.cpp  nv_ml.h  nv_ml_gaussian.h  nv_ml_kmeans.h  nv_ml_mlp.h  nv_mlp.c  nv_mlp.cpp
nvxs/nv_num/: nv_cov.c  nv_cov.cpp  nv_distance.c  nv_eigen.c  nv_matrix.c  nv_num.h  nv_num_cov.h  nv_num_distance.h  nv_num_lapack.h  nv_num_matrix.h  nv_num_vector.h  nv_vector.cpp
